opam-version: "2.0"
maintainer: "rvantonder@gmail.com"
authors: "Rijnard van Tonder"
homepage: "https://github.com/comby-tools/comby"
bug-reports: "https://github.com/comby-tools/comby/issues"
dev-repo: "git+https://github.com/comby-tools/comby.git"
license: "Apache-2.0"
build: [
    [
      "dune"
      "build"
      "-p"
      name
      "-j"
      jobs
      "@install"
      "@runtest" {with-test}
    ]
]
depends: [
  "dune" {>= "2.8.0"}
  "ocaml" {>= "4.08.1"}
  "core_kernel"
  "comby-kernel"
  "opium" {= "0.18.0"}
  # "ssl" {= "0.5.9"} # https://github.com/savonet/ocaml-ssl/issues/70 ?
  # "dream"
]
synopsis: "A server for comby"
description: """
"""
